gccida/g2/consec_sets_giv
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7380:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7380:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7383:4: error: expected ';' after expression
rtx v32; // [rsp+32h] [rbp-D0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7383:5: error: use of undeclared identifier 'v32'
rtx v32; // [rsp+32h] [rbp-D0h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7384:4: error: expected ';' after expression
rtx v33; // [rsp+3Ah] [rbp-C8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7384:5: error: use of undeclared identifier 'v33'
rtx v33; // [rsp+3Ah] [rbp-C8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7390:6: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
rtx *add_vala; // [rsp+B2h] [rbp-50h] 
     ^~~~~~~~
     add_val
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7390:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx *' (aka 'struct rtx_def **'))
rtx *add_vala; // [rsp+B2h] [rbp-50h] 
~~~ ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7391:4: error: expected ';' after expression
rtx src_rega[2]; // [rsp+BAh] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7391:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
rtx src_rega[2]; // [rsp+BAh] [rbp-48h] BYREF 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7398:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega[0] = src_reg; 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7398:13: error: assigning to 'struct rtx_def' from incompatible type 'rtx' (aka 'struct rtx_def *'); dereference with *
src_rega[0] = src_reg; 
            ^ ~~~~~~~
              *
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7399:1: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
add_vala = add_val; 
^~~~~~~~
add_val
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7406:1: error: use of undeclared identifier 'v32'
v32 = v15; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7409:1: error: use of undeclared identifier 'v33'
v33 = v16; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7446:13: error: expected ';' after expression
v23 = ( rtx)p[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7454:9: error: expected expression
*( rtx *)&v23[1], 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7455:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega, 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7456:1: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
add_vala, 
^~~~~~~~
add_val
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/consec_sets_giv/src/obj/loop.o] Error 1
